crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderUnknownTexture.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:bd59440c32fcc9940ca071d7bcdacd5ed9d9fb1fd539f4979b6f734a248f773e
size 779
